--------------------------------------------------------------------
Data Crow version 4.12                        Released on 2024-xx-xx
--------------------------------------------------------------------

[Updated]
- Updated libraries as used by Data Crow to avoid exposure to vulnerabilities:
  Apache Maven plugins, IZ Pack, Metadata-extractor, Log4j, Bouncy Castle, twelvemonkeys.imageio, org.apache.tika,
  org.apache.pdfbox, org.jsoup, com.google.code.gson, net.sf.jasperreports, Xalan, org.hsqldb, org.apache.xmlgraphics
- Data Crow minimum Java version has been increased from Java 11 to Java 18.
- Small layout improvements for the item form and the login dialog.
- Scrolling performance has been improved for the card list.
- Extended the supported image types for the local art import for movies and music files.

[Fixed]
- Right-click menu on attachment: icon size too large.
- Icons in main window were blurry.
- View never updated the status bar when only 1 item has been selected.
- Attachments menu was missing icons.


--------------------------------------------------------------------
Data Crow version 4.11                        Released on 2023-12-04
--------------------------------------------------------------------

[Fixed]
- Sometimes items could not be saved due to an error in calculating the file hash.
- Sometimes an attachment could not be opened.
- Added better management of number of requests for the Google Book Search. In case of a "too many request" error, Data Crow will retry after 1.5 seconds and will do so for a maximum of 4 retries. 
- MobyGames.com did not show & and other characters correctly in the title.
- Create tab window size was not stored.
- Icon cannot be selected when creating a new tab for the item form.
- When a data folder / user folder was newly set up, Data Crow would (try to) create nulldc.script and nulldc.properties in the installation folder.
- Removed synchronizer for persons (should not have been there)